# Confiture-Tycoon-Premium-Edition

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: grid
include/: Game.hpp  Map.hpp  Structures.hpp  Tile.hpp  Ui.hpp  Window.hpp
src/: AHabitation.cpp  AHabitation.hpp  AOxygenProducer.cpp  AOxygenProducer.hpp  ARessourceProducer.cpp  ARessourceProducer.hpp  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  IStructures.hpp  Map.cpp  Map.hpp  ResourceManager.cpp  ResourceManager.hpp  Tile.cpp  Tile.hpp  Ui.hpp  Window.cpp  Window.hpp  main.cpp
src/Events/: EventManager.cpp  EventManager.hpp  IEvent.cpp  IEvent.hpp  MeteorEvent.cpp  MeteorEvent.hpp
src/Particle/: Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Scenes/: AScene.cpp  AScene.hpp
src/Scenes/Impl/: DeathScreen.cpp  DeathScreen.hpp  Main.cpp  Main.hpp  Splashscreen.cpp  Splashscreen.hpp
src/Structures/: Generator.hpp  Grange.hpp  House.hpp  Mine.hpp  Tree.hpp
src/Structures/Abstracts/: ABasicResourceProducer.hpp  AHabitation.cpp  AHabitation.hpp  AOxygenProducer.cpp  AOxygenProducer.hpp  AResourceProducer.cpp  AResourceProducer.hpp  ARessourceProducer.cpp  ARessourceProducer.hpp  IStructure.hpp
src/Structures/Factory/: Factory.cpp  Factory.hpp
src/UI/: Drawer.cpp  Drawer.hpp  DrawerButton.cpp  DrawerButton.hpp  DualityBar.cpp  DualityBar.hpp  UI.cpp  UI.hpp  Ui.cpp  draw_ui.cpp
